[tool.poetry]
name = "polars-armv7-repro"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Dmitriy Zharikhin <jorixxx@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
polars = "^1.28.1"
poetry-core = "^2.1.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
